k8s/catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: rxpulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: rxpulsehub/rxpulse-catalog:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          startupProbe:
            httpGet:
              path: /health
              port: 3002
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3002
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: rxpulse
spec:
  selector:
    app: catalog-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
