k8s/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: rxpulse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: rxpulsehub/rxpulse-inventory:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          startupProbe:
            httpGet:
              path: /health
              port: 3003
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3003
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: rxpulse
spec:
  selector:
    app: inventory-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
